@startuml PacTroll
skinparam dpi 300
skinparam classAttributeIconSize 0

package "pygame.sprite" {
    class Sprite {
    }

    class Group {
        add(sprite)
        draw()
    }
    Group "*" -r- "*" Sprite
}

class Boks {
    image : Surface
    rect : Rect
    app : App
    __init__(app: App, farge: str, bokstav: str, x: int, y: int)
}

class Troll {
    hastighet : float
    ikke_aktiverte_hinder : list<Hinder>
    __init__(app: App)
    update() : None
}

class Mat {
    __init__(app: App)
}

class Hinder {
    __init__(app: App, x: int, y: int)
}

class App {
    clock : Clock
    screen : Surface
    running : bool
    game_over : bool
    poeng : int
    troll : Troll
    hindre : Group
    matbiter : Group
    all_sprites : Group
    __init__()
    handle_events()
    update()
    draw()
    run()
}

Troll  -u-|> Boks
Mat    -u-|> Boks
Hinder -u-|> Boks
Boks   -u-|> Sprite

App *-d- Troll 
App *-d- Mat
App o-d- Hinder 
App *-u- Group : hindre
App *-u- Group : matbiter
App *-u- Group : all_sprites

@enduml
